<resources>

    <string name="app_name">Lilbubblegum</string>
    <string name="author_name">Numers jack</string>

    <!-- Strings used for menu -->
    <string name="vertical_orientation">Vertical</string>
    <string name="horizontal_orientation">Horizontal</string>
    <string name="system_orientation">System</string>
    <string name="text_larger">Make text larger</string>
    <string name="text_smaller">Make text smaller</string>


    <string name="content_description">yza</string>

    <string name="text_description">
        Rahmet Gylyjow we kitaby taýýarlamakda kömek eden adamlara köp sag bolsun! Örän gowy kitap durmuş ýol görkezijisi, bu kitap maňa köp zatlary öwretdi. Kitaby okamagy sizede maslahat berýan.Rahmet Gylyjow we kitaby taýýarlamakda kömek eden adamlara köp sag bolsun! Örän gowy kitap durmuş ýol görkezijisi, bu kitap maňa köp zatlary öwretdi. Kitaby okamagy sizede maslahat berýan.Rahmet Gylyjow we kitaby taýýarlamakda kömek eden adamlara köp sag bolsun! Örän gowy kitap durmuş ýol görkezijisi, bu kitap maňa köp zatlary öwretdi. Kitaby okamagy sizede maslahat berýan.Rahmet Gylyjow we kitaby taýýarlamakda kömek eden adamlara köp sag bolsun! Örän gowy kitap durmuş ýol görkezijisi, bu kitap maňa köp zatlary öwretdi. Kitaby okamagy sizede maslahat berýan.Rahmet Gylyjow we kitaby taýýarlamakda kömek eden adamlara köp sag bolsun! Örän gowy kitapp sag bolsun! Örän gowy kitap durmuş ýol görkezijisi, bu kitap maňa köp zatlary öwretdi. Kitaby okamagy sizede maslahat berýan.Rahmet Gylyjow we kitaby taýýarlamakda kömek eden adamlara köp sag bolsun! Örän gowy kitap durmuş ýol görkezijisi, bu kitap maňa köp zatlary öwretdi. Kitaby okamagy sizede maslahat berýan.Rahmet Gylyjow we kitaby taýýarlamakda kömek eden adamlara köp sag bolsun! Örän gowy kitap durmuş ýol görkezijisi, bu kitap maňa köp zatlary öwretdi. Kitaby okamagy sizede maslahat berýan.Rahmet Gylyjow we kitaby t
    </string>
    <string name="theme">Theme</string>
</resources>