<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/theme"
        android:title="@string/theme"
        android:icon="@drawable/ic_theme"
        app:showAsAction="always"
        android:onClick="onThemeClick"/>
    <item
        android:id="@+id/vertical_orientation"
        android:orderInCategory="1"
        android:title="@string/vertical_orientation"
        android:onClick="onVerticalOrientationClick"/>
    <item
        android:id="@+id/horizontal_orientation"
        android:orderInCategory="2"
        android:title="@string/horizontal_orientation"
        android:onClick="onHorizontalOrientationClick"/>
    <item
        android:id="@+id/system_orientation"
        android:orderInCategory="3"
        android:title="@string/system_orientation"
        android:onClick="onVerticalOrientationClick"/>
    <item
        android:id="@+id/font_magnification"
        android:orderInCategory="4"
        android:title="@string/text_larger" />
    <item
        android:id="@+id/font_reduction"
        android:orderInCategory="5"
        android:title="@string/text_smaller" />
</menu>